--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,27 +4,50 @@
  * work well for content-centric websites.
  */
 
+ @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+}
+
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #de1155;
+  --ifm-color-primary-dark: #bc003f;
+  --ifm-color-primary-darker: #a80038;
+  --ifm-color-primary-darkest: #82002b;
+  --ifm-color-primary-light: #bc003f;
+  --ifm-color-primary-lighter: #d40047;
+  --ifm-color-primary-lightest: #ee3573;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-family-base: "Inter", sans-serif;
+  --ifm-font-size-base: 16px;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #f41b55;
+  --ifm-color-primary-dark: #da0940;
+  --ifm-color-primary-darker: #da0840;
+  --ifm-color-primary-darkest: #d3093f;
+  --ifm-color-primary-light: #d32d4e;
+  --ifm-color-primary-lighter: #de2248;
+  --ifm-color-primary-lightest: #ef244c;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+html[data-theme="dark"] {
+  --ifm-background-color: #101010;
+  --ifm-background-surface-color: #101010;
+
+  .navbar {
+    border-bottom: 1px solid var(--ifm-color-emphasis-200);
+  }
+}
+
