--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,6 +4,7 @@
  * work well for content-centric websites.
  */
 
+/*
  @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
 h1,
@@ -14,6 +15,7 @@ h5 {
   font-family: "Inter", sans-serif;
   font-weight: 700;
 }
+*/
 
 /* You can override the default Infima variables here. */
 :root {
@@ -26,7 +28,7 @@ h5 {
   --ifm-color-primary-lightest: #ee3573;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --ifm-font-family-base: "Inter", sans-serif;
+  /*--ifm-font-family-base: "Inter", sans-serif;*/
   --ifm-font-size-base: 16px;
 }
 
